snapshot_tests/operations/errors/fragmentWithWrongName.res
%graphql(`
  fragment ListFragment on Lists {
    nullableOfNullable
    nullableOfNonNullable
  }
`)

module WrongFragmentName = ListFragment

%graphql(`
  query MyQuery {
    lists {
      ...WrongFragmentName

    }
  }
  `)
